Swapped to new query

--- a/module/Olcs/view/pages/declarations.phtml
+++ b/module/Olcs/view/pages/declarations.phtml
@@ -35,57 +35,7 @@
         <h2><?php echo $this->translate($title); ?></h2>
     </div>
     <div class="printable__section">
-        <h4>Agreements</h4>
-        <p>By applying I agree to follow the rules below, and I'm aware that:</p>
-        <ul>
-            <li>the rules will be recorded on my licence</li>
-            <li>my licence could be revoked, suspended or curtailed if I don't follow them </li>
-            <li>it's a criminal offence not to follow the rules</li>
-        </ul>
-
-        <h4>Laws</h4>
-        <p>I agree to obey laws that cover:</p>
-        <ul>
-            <li>operating vehicles</li>
-            <li>drivers' hours</li>
-            <li>tachographs</li>
-            <li>speed limits</li>
-        </ul>
-
-        <h4>Passengers</h4>
-        <p>My vehicles won't carry more passengers than they're permitted to.</p>
-
-        <h4>Records</h4>
-        <p>I'll maintain proper records and show them when they're needed.</p>
-        <p>I'll also:</p>
-        <ul>
-            <li>keep records of driver reports for 15 months</li>
-            <li>record defects, safety inspections, maintenance and repairs</li>
-        </ul>
-
-        <h4>Vehicle condition</h4>
-        <p>I'll keep my vehicles in good condition, and:</p>
-        <ul>
-            <li>promptly report any defects, or symptoms of them</li>
-            <li>record the details in writing</li>
-            <li>show records when they're needed</li>
-        </ul>
-
-        <h4>Informing the Traffic Commissioner</h4>
-        <p>I'll tell the Traffic Commissioner within 28 days if:</p>
-        <ul>
-            <li>there are any other changes</li>
-            <li>anyone mentioned in this application is convicted of an offence</li>
-        </ul>
-
-        <h4>Declaration</h4>
-        <p>I declare that:</p>
-        <ul>
-            <li>the statements I've made in this application are true</li>
-            <li>all supporting evidence is correct</li>
-            <li>I understand that it's an offence to make a false declaration</li>
-        </ul>
-
+        <p><?php echo $undertakings; ?></p>
     </div>
 
     <div class="signature-box">
