--- a/module/Olcs/view/pages/application-summary.phtml
+++ b/module/Olcs/view/pages/application-summary.phtml
@@ -1,23 +1,122 @@
 <div class="page-header">
     <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
     <div class="page-header__wrapper">
+        <h3 class="page-header__subtitle">
+            <?php echo $this->translate('application.overview.application-no') . $application; ?>
+        </h3>
         <h1><?php echo $this->translate('lva-summary-title'); ?></h1>
+        <ul class="page-header__actions">
+            <li>
+                <a href="<?php echo $this->url('lva-' . $lva . '/review', [], [], true); ?>" target="_blank"
+                   class="page-header__action"><?php echo $this->translate('view-full-application') ?></a>
+            </li>
+            <?php if ($canWithdraw): ?>
+                <li>
+                    <a href="<?php echo $this->url('lva-' . $lva . '/withdraw', [], [], true); ?>"
+                       class="page-header__action js-modal-ajax"><?php echo $this->translate('withdraw-application') ?></a>
+                </li>
+            <?php endif; ?>
+        </ul>
     </div><!-- .page-header__wrapper -->
 </div><!-- .page-header -->
 
 <div class="two-thirds">
-    <div class="confirmation">
-        <h2><?php echo $this->translate('lva-summary-application-submitted'); ?></h2>
-        <p><b><?php echo $this->translate('lva-summary-reference-number'); ?></b></p>
-        <h2><?php echo $licence;?>/<?php echo $application; ?></h2>
-    </div><!-- .confirmation -->
-
-    <?php if ($paymentRef): ?>
-    <div class="actions-container">
-      <a href="<?php echo $this->url('fees/receipt', ['action' => 'print', 'reference' => $paymentRef]);?>" class="action--secondary large" target="_blank"><?php echo $this->translate('pay-fees.success.print-receipt'); ?></a>
+    <div class="article">
+        <?php if ($justPaid): ?>
+        <p><?php echo $this->translate('lva-summary-application-submitted'); ?></p>
+        <div class="confirmation">
+            <p><?php echo $this->translate('lva-summary-reference-number'); ?></p>
+            <h2><?php echo $licence . '/' . $application; ?></h2>
+            <?php if ($paymentRef): ?>
+                <p>
+                    <a href="<?php echo $this->url('fees/receipt', ['action' => 'print', 'reference' => $paymentRef]);?>">
+                        <?php echo $this->translate('pay-fees.success.view-receipt'); ?>
+                    </a>
+                </p>
+            <?php endif; ?>
+        </div>
+        <?php endif; ?>
+        <h2><?php echo $this->translate('What do I need to do next?'); ?></h2>
+        <p><?php echo $this->translate('application-summary-what-next-text'); ?></p>
     </div>
-    <hr>
-    <?php endif; ?>
+    <div class="article">
 
-    <?php echo $this->partial('partials/shared-application-summary'); ?>
+        <?php // <---- START: Out of scope [Just Placeholder Markup] ---> ?>
+        <div class="incomplete-section">
+            <h3><?php echo $this->translate('print-sign-return-declaration-form'); ?></h3>
+            <p>
+                If you haven't already, an owner or Director of the business must sign the declaration form and return
+                it to the <?php echo $this->translate('opening-times-link'); ?>.
+            </p>
+            <p>
+                <a href="<?php echo $this->url('lva-' . $lva . '/declaration', [], [], true); ?>" target="_blank" class="download">
+                    Print declaration form
+                </a>
+            </p>
+            <hr>
+        </div>
+
+        <div class="incomplete-section">
+            <h3>Supply supporting evidence</h3>
+            <p>You did not upload the following documents:<br>• <b>Financial evidence</b></p>
+            <p>
+                You will need to send these documents to the
+                <?php echo $this->translate('opening-times-link'); ?>
+                along with your application reference number (<?php echo $licence . '/' . $application; ?>).
+            </p>
+        </div>
+
+        <div class="incomplete-section">
+            <h3><?php echo $this->translate('approve-tm.title'); ?></h3>
+            <div class="table__wrapper">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>DOB</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="">
+                        <td>Morgan Patel <span class="status green">Approved</span></td>
+                        <td>7 May 1962</td>
+                        <td><a class="remove" href="">View details</a></td>
+                    </tr>
+                    <tr class="">
+                        <td>Dave Willis <span class="status red">Awaiting approval</span></td>
+                        <td>13 May 1978</td>
+                        <td><a class="remove" href="">View details</a></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div><!-- .table__wrapper -->
+        </div>
+        <?php // <---- END: Out of scope---> ?>
+
+        <h3 class="important"><?php echo $this->translate('lva-summary-important'); ?></h3>
+        <p><?php echo $this->translate('application-summary-important-text'); ?></p>
+    </div><!-- .article -->
+    <hr>
+
+    <p><a href="<?php echo $this->url('dashboard'); ?>"><?php echo $this->translate('return-home-button-text'); ?></a></p>
+</div>
+<div class="one-third sidebar">
+    <dl class="meta">
+        <dt><?php echo $this->translate('application-reference-no.title'); ?></dt>
+        <dd><?php echo $licence . '/' . $application; ?></dd>
+        <?php if ($paymentRef): ?>
+            <dt><?php echo $this->translate('payment-reference-no.title'); ?></dt>
+            <dd><?php echo $paymentRef; ?></dd>
+            <a href="<?php echo $this->url('fees/receipt', ['action' => 'print', 'reference' => $paymentRef]);?>">
+                <?php echo $this->translate('pay-fees.success.print-receipt'); ?>
+            </a>
+        <?php endif; ?>
+        <dt><?php echo $this->translate('submitted-date.title'); ?></dt>
+        <dd><?php echo date('d F Y', strtotime($submittedDate)); ?></dd>
+        <dt><?php echo $this->translate('completion-date.title'); ?></dt>
+        <dd><?php echo date('d F Y', strtotime($completionDate)); ?></dd>
+        <dt><?php echo $this->translate('status.title'); ?></dt>
+        <dd><?php echo $this->translate($status); ?></dd>
+    </dl><!-- .meta -->
 </div>
