--- a/module/Olcs/view/search/index-bus.phtml
+++ b/module/Olcs/view/search/index-bus.phtml
@@ -1,13 +1,13 @@
 
     <div class="page-header">
+        <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
         <div class="page-header__wrapper">
             <h1><?php echo $this->translate('search.title.bus'); ?></h1>
-            <div class="page-header__text"><p><?php echo $this->translate('search.subtitle.bus'); ?></p></div>
         </div><!-- .page-header__wrapper -->
     </div><!-- .page-header -->
+    
     <div class="two-thirds">
-
         <?php echo $this->partial('search/form.phtml', ['form' => $this->searchForm]); ?>
-
     </div>
+    
 </div><!-- .two-thirds -->
