--- a/module/Olcs/view/search/index-operator.phtml
+++ b/module/Olcs/view/search/index-operator.phtml
@@ -1,13 +1,9 @@
 
     <div class="page-header">
-        
+        <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
         <div class="page-header__wrapper">
             <h1><?php echo $this->translate('search.title.operator'); ?></h1>
-            <div class="page-header__text">
-                <p><?php echo $this->translate('search.subtitle.operator'); ?></p>
-            </div>
         </div><!-- .page-header__wrapper -->
-        
     </div><!-- .page-header -->
     
     <div class="two-thirds">
