OLCS-10766 update fee table configs etc to show outstanding amounts

--- a/module/Olcs/view/pages/fees/pay-one.phtml
+++ b/module/Olcs/view/pages/fees/pay-one.phtml
@@ -37,7 +37,7 @@
                 ],
                 [
                     'label' => 'pay-fees.amount',
-                    'value' => '£'.number_format($fee['amount'],2),
+                    'value' => '£'.number_format($fee['outstanding'],2),
                 ],
             ],
           ],
