OLCS-10888 adding "start again" link to search filter

--- a/module/Olcs/view/layouts/main-search-results.phtml
+++ b/module/Olcs/view/layouts/main-search-results.phtml
@@ -28,6 +28,8 @@ $results = $this->results;
         <h3>Edit search</h3>
 
         <?php echo $this->form($this->placeholder('searchFilter')->getValue()) ?>
+        
+        <a href="/search/jump">Start again</a>
 
     </div><!-- .three-eights -->
 
