Added view helper to lva-details partial

--- a/module/Olcs/view/pages/lva-details.phtml
+++ b/module/Olcs/view/pages/lva-details.phtml
@@ -49,6 +49,20 @@ if (isset($sectionText)) {
   }
   ?>
 
+  <?php
+
+  $messages = $this->flashMessenger('prominent-error');
+
+  foreach ($messages as $message) {
+      ?>
+      <div class="validation-summary">
+          <?php echo $this->translate($message); ?>
+      </div>
+      <?php
+  }
+
+  ?>
+
   <?php echo $this->flashMessengerAll(); ?>
 
   <?php if (isset($table)): ?>
