--- a/module/Olcs/view/layouts/main-search-results.phtml
+++ b/module/Olcs/view/layouts/main-search-results.phtml
@@ -29,7 +29,9 @@ $results = $this->results;
 
         <?php echo $this->form($this->placeholder('searchFilter')->getValue()) ?>
         
-        <a href="/search/jump"><?php echo $this->translate('search.form.reset'); ?></a>
+        <a href="<?php echo $this->url('search-jump-home'); ?>">
+            <?php echo $this->translate('search.form.reset'); ?>
+        </a>
 
     </div><!-- .three-eights -->
 
