OLCS-10766 fix fee summary view following merge

--- a/module/Olcs/view/pages/fees/pay-one.phtml
+++ b/module/Olcs/view/pages/fees/pay-one.phtml
@@ -37,6 +37,10 @@
                 ],
                 [
                     'label' => 'pay-fees.amount',
+                    'value' => '£'.number_format($fee['amount'],2),
+                ],
+                [
+                    'label' => 'pay-fees.outstanding',
                     'value' => '£'.number_format($fee['outstanding'],2),
                 ],
             ],
