--- a/module/Olcs/view/layouts/main-search-results.phtml
+++ b/module/Olcs/view/layouts/main-search-results.phtml
@@ -30,7 +30,7 @@ $results = $this->results;
         <?php echo $this->form($this->placeholder('searchFilter')->getValue()) ?>
         
         <a href="<?php echo $this->url('search-jump-home'); ?>">
-            <?php echo $this->translate('search.form.reset'); ?>
+            <?php echo $this->translate('search.form.restart'); ?>
         </a>
 
     </div><!-- .three-eights -->
