OLCS-10826 SS Fee Important Messages - prior to paying

--- a/module/Olcs/view/pages/fees/pay-multi.phtml
+++ b/module/Olcs/view/pages/fees/pay-multi.phtml
@@ -19,7 +19,7 @@
 
   <hr>
 
-  <?php echo $this->translate('markup-pay-fees-notice'); ?>
+  <?php echo $this->translate('markup-pay-fees-notice' . ($hasContinuation ? '-continuation' : '')); ?>
 
   <hr>
 
