--- a/module/Olcs/view/pages/fees/pay-one.phtml
+++ b/module/Olcs/view/pages/fees/pay-one.phtml
@@ -51,7 +51,7 @@
 
   <hr>
 
-  <?php echo $this->translate('markup-pay-fees-notice'); ?>
+  <?php echo $this->translate('markup-pay-fees-notice' . ($hasContinuation ? '-continuation' : '')); ?>
 
   <hr>
 
