OLCS-10938 SS Fee Important Messages - after paying

--- a/module/Olcs/view/pages/fees/payment-success.phtml
+++ b/module/Olcs/view/pages/fees/payment-success.phtml
@@ -26,7 +26,7 @@
 
   <hr>
 
-  <?php echo $this->translate('markup-pay-fees-success-notice'); ?>
+  <?php echo $this->translate('markup-pay-fees-success-notice'. ($hasContinuation ? '-continuation' : '')); ?>
 
   <hr>
 
