--- a/module/Olcs/view/error/index.phtml
+++ b/module/Olcs/view/error/index.phtml
@@ -6,11 +6,10 @@
     </div><!-- .page-header-->
 
     <div class="two-thirds">
-        <p><?php echo $this->translate('500-text') ?></p>
-        <div class="actions-container">
-            <a href="<?php echo $this->url('index'); ?>" class="action--primary large">
-                <?php echo $this->translate('back-to-home'); ?>
-            </a>
+        <div class="article">
+            <?php echo $this->translate('markup-500-text'); ?>
+            <hr>
+            <p><a href="<?php echo $this->url('index'); ?>"><?php echo $this->translate('back-to-home'); ?></a></p>
         </div>
     </div>
 </div>
