OLCS-10996 SS Privacy and cookies page

--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -74,7 +74,7 @@
       <div class="global-footer__wrapper">
         <ul class="global-footer__links">
           <li class="global-footer__link"><a href="">Helpdesk</a></li>
-          <li class="global-footer__link"><a href="">Privacy and cookies</a></li>
+          <li class="global-footer__link"><a href="<?php echo $this->url('cookies');?>"><?php echo $this->translate('privacy-and-cookies-title') ?></a></li>
           <li class="global-footer__link">
               <?php echo $this->languageLink(); ?>
           </li>
