OLCS-10997 SelfServe T&Cs page

--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -73,7 +73,7 @@
     <div class="global-footer">
       <div class="global-footer__wrapper">
         <ul class="global-footer__links">
-          <li class="global-footer__link"><a href="">Helpdesk</a></li>
+          <li class="global-footer__link"><a href="<?php echo $this->url('terms-and-conditions');?>"><?php echo $this->translate('terms-and-conditions-title') ?></a></li>
           <li class="global-footer__link"><a href="<?php echo $this->url('cookies');?>"><?php echo $this->translate('privacy-and-cookies-title') ?></a></li>
           <li class="global-footer__link">
               <?php echo $this->languageLink(); ?>
