--- a/module/Olcs/view/pages/application-summary.phtml
+++ b/module/Olcs/view/pages/application-summary.phtml
@@ -23,7 +23,15 @@
 <div class="two-thirds">
     <div class="article">
         <?php if ($justPaid): ?>
-        <p><?php echo $this->translate('lva-summary-application-submitted'); ?></p>
+        <p>
+            <?php
+            echo $this->translate(
+                ($outstandingFee) ?
+                'lva-summary-application-submitted-fee-outstanding' :
+                'lva-summary-application-submitted'
+            );
+            ?>
+        </p>
         <div class="confirmation">
             <p><?php echo $this->translate('lva-summary-reference-number'); ?></p>
             <h2><?php echo $licence . '/' . $application; ?></h2>
