applying various minor amends/text updates throughout service

--- a/module/Olcs/view/overview-variation.phtml
+++ b/module/Olcs/view/overview-variation.phtml
@@ -54,13 +54,13 @@
   </dl>
 
   <div class="links">
-    <h3>Applying for a new licence</h3>
+    <h3>Applying for a variation</h3>
     <ul class="links-list">
-      <li class="links-list__item"><a href="">Complete your applications for a goods vehicle operator's licence</a></li>
-      <li class="links-list__item"><a href="">Advertise your application for a licence</a></li>
-      <li class="links-list__item"><a href="">Financial information</a></li>
-      <li class="links-list__item"><a href="">A guide to operator fees</a></li>
-      <li class="links-list__item"><a href="">How to draw up a maintenance contract</a></li>
+        <li class="links-list__item"><a target="blank" href="http://gov.uk/being-a-goods-vehicle-operator">Being a goods vehicle operator</a></li>
+        <li class="links-list__item"><a target="blank" href="https://www.gov.uk/psv-operator-licences">Public Service Vehicle operator licences</a></li>
+        <li class="links-list__item"><a href="/guides/advertising-your-operating-centre-gb/">How to advertise your goods application</a></li>
+        <li class="links-list__item"><a href="/guides/financial-evidence">How to provide financial evidence</a></li>
+        <li class="links-list__item"><a target="blank" href="https://gov.uk/government/collections/vehicle-safety-and-maintenance-guides ">Vehicle safety and maintenance guides</a></li>
     </ul>
   </div>
 </div>
