--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -73,15 +73,19 @@
     <div class="global-footer">
       <div class="global-footer__wrapper">
         <ul class="global-footer__links">
-          <li class="global-footer__link"><a href="<?php echo $this->url('terms-and-conditions');?>"><?php echo $this->translate('terms-and-conditions-title') ?></a></li>
-          <li class="global-footer__link"><a href="<?php echo $this->url('cookies');?>"><?php echo $this->translate('privacy-and-cookies-title') ?></a></li>
+          <li class="global-footer__link">
+              <a href="<?php echo $this->url('terms-and-conditions');?>"><?php echo $this->translate('terms-and-conditions-title') ?></a>
+          </li>
+          <li class="global-footer__link">
+              <a href="<?php echo $this->url('cookies');?>"><?php echo $this->translate('privacy-and-cookies-title') ?></a>
+          </li>
           <li class="global-footer__link">
               <?php echo $this->languageLink(); ?>
           </li>
           <li class="global-footer__link">Built by <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency">Driver and Vehicle Standards Agency</a></li>
         </ul>
         <div class="global-footer__copyright">
-          <a href="">&copy; Crown copyright</a>
+          <a href="http://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/copyright-and-re-use/crown-copyright/" target="blank">&copy; Crown copyright</a>
         </div>
         </div><!-- end global-wrapper -->
     </div><!-- end global-footer -->
