--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -9,13 +9,11 @@ echo $this->render(
 <div class="two-thirds">
     <div class="article">
         <p><?php echo $this->translate('ebsr-upload-subtitle');?></p>
-        <h3>Please check the following</h3>
         <ul>
-            <li>Lorem ipsum dolor sit amet</li>
-            <li>Consectetur adipiscing elit tempor incididun</li>
-            <li>Aliquip ex ea commodo consequa</li>
-            <li>Ut enim ad minim veniam</li>
+            <li>your EBSR is in .ZIP format</li>
+            <li>you’ve included supporting information like maps, timetables and letters of support</li>
         </ul>
+        <p>Once you’ve submitted your application you must pay all your fees before we can consider it.</p>
     </div>
     <?php echo $this->flashMessengerAll(); ?>
 
