moving crown copyright link into config

--- a/module/Olcs/view/overview-variation.phtml
+++ b/module/Olcs/view/overview-variation.phtml
@@ -58,7 +58,7 @@
     <ul class="links-list">
         <li class="links-list__item"><a target="blank" href="http://gov.uk/being-a-goods-vehicle-operator">Being a goods vehicle operator</a></li>
         <li class="links-list__item"><a target="blank" href="https://www.gov.uk/psv-operator-licences">Public Service Vehicle operator licences</a></li>
-        <li class="links-list__item"><a href="/guides/advertising-your-operating-centre-gb/">How to advertise your goods application</a></li>
+        <li class="links-list__item"><a href="<?php echo $this->url('guides/guide', ['guide' => 'advertising-your-operating-centre-gb']); ?>">How to advertise your goods application</a></li>
         <li class="links-list__item"><a href="/guides/financial-evidence">How to provide financial evidence</a></li>
         <li class="links-list__item"><a target="blank" href="https://gov.uk/government/collections/vehicle-safety-and-maintenance-guides ">Vehicle safety and maintenance guides</a></li>
     </ul>
