--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -1,29 +1,29 @@
 <?php
-echo $this->render(
-    '/partials/page-header.phtml',
-    array(
-        'pageTitle' => $this->translate('ebsr-upload-title')
-    )
-);
+    echo $this->render(
+        '/partials/page-header.phtml',
+        array(
+            'pageTitle' => $this->translate('ebsr-upload-title')
+        )
+    );
 ?>
+
 <div class="two-thirds">
     <div class="article">
         <p><?php echo $this->translate('ebsr-upload-subtitle');?></p>
         <ul>
-            <li>your EBSR is in .ZIP format</li>
-            <li>you’ve included supporting information like maps, timetables and letters of support</li>
+            <li><?php echo $this->translate('ebsr-ensure-format');?></li>
+            <li><?php echo $this->translate('ebsr-supporting-info');?></li>
         </ul>
-        <p>Once you’ve submitted your application you must pay all your fees before we can consider it.</p>
+        <p><?php echo $this->translate('ebsr-what-next');?></p>
     </div>
     <?php echo $this->flashMessengerAll(); ?>
-
     <?php
-    echo $this->formErrors($this->form, true);
-    $this->form->prepare();
-    echo $this->form()->render($this->form);
+        echo $this->formErrors($this->form, true);
+        $this->form->prepare();
+        echo $this->form()->render($this->form);
     ?>
 </div>
 
 <div class="one-third sidebar">
     <?php echo $this->translate('markup-support-contact-address');?>
-</div><!-- .one-quarter -->
+</div>
